--- a/src/home.html
+++ b/src/home.html
@@ -11,14 +11,14 @@
 			<section class="main__section">
 				<div class="main__container">
 					<div class="main-title">
-						<h2>Производство продукции<br>
+						<h2>Изготовление продукции<br>
 							Народных художественных промыслов</h2>
 					</div>
 					<div class="main-text">
 						<p>Доставка по всей территории РФ</p>
 					</div>
 					<div class="main-button">
-						<a href="#" class="button">Перейти в каталог</a>
+						<a href="catalog.html" class="button">Перейти в каталог</a>
 					</div>
 				</div>
 			</section>
@@ -155,7 +155,7 @@
 						</div>
 					</div>
 					<div class="photo-button">
-						<a href="#" class="button">Смотреть все</a>
+						<a href="photo.html" class="button">Смотреть все</a>
 					</div>
 				</div>
 			</section>
