--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -2,7 +2,7 @@
 	<div class="header__top">
 		<div class="header__top__container">
 			<div class="header__top-logo">
-				<a href="#" class="header__logo">
+				<a href="home.html" class="header__logo">
 					<img src="../img/header/logo.png" alt="">
 					<h1>Центр традиционной <br>
 						Мстёрской миниатюры</h1>
@@ -21,7 +21,7 @@
 				<a href="#" class="map icon-map">п. Мстера, ул Ленина, д.2</a>
 			</div>
 			<div class="header__top-button" data-da=".header__top-mobile,35,1">
-				<a href="#" class="button">Перейти в каталог</a>
+				<a href="catalog.html" class="button">Перейти в каталог</a>
 			</div>
 			<div class="header__top-mobile"></div>
 			<div class="menu__icon icon-menu">
@@ -37,10 +37,10 @@
 				<nav class="menu__body">
 					<ul class="menu__list">
 						<li><a href="#" class="menu__link">Главная</a></li>
-						<li><a href="#" class="menu__link">Каталог</a></li>
+						<li><a href="catalog.html" class="menu__link">Каталог</a></li>
 						<li><a href="#" class="menu__link">О нас</a></li>
 						<li><a href="#" class="menu__link">История</a></li>
-						<li><a href="#" class="menu__link">Оплата и доставка</a></li>
+						<li><a href="delivery.html" class="menu__link">Оплата и доставка</a></li>
 						<li><a href="#" class="menu__link">Контакты</a></li>
 					</ul>
 				</nav>
